--- a/index.html
+++ b/index.html
@@ -28,32 +28,35 @@
         </ul>
       </header>
       <section>
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>Short Project Description</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Open Source ASN.1 decoder written in Python (2.7) </p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<h3>Main Project Text</h3>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>This is a ASN.1 decoder written entirely in Python (2.7). It is meant to be run from the command line and to write its output to standard out. Of course, standard out can be redirected as need be. The ASN.1 input comes from a file (in several different formats).</p>
 
-<h3>Designer Templates</h3>
+<p>The most important features are OID decoding into useable text and nested object analysis. Many ASN.1 objects contain nested text, byte arrays, and bit strings that may or may not be ASN.1 objects in their own right. Optionally this program checks nested objects for ASN.1 and formats them as ASN.1 if possible.</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h3>Dependencies</h3>
 
-<h3>Rather Drive Stick?</h3>
+<p>Python 2.7 for now. Should work with earlier versions of Python. Has not been tested with Python 3+ so far. </p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h3>Installation Instructions</h3>
 
-<h3>Authors and Contributors</h3>
+<p>There really aren't any. Just put the main Python file where ever you need it and run it.</p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<h3>Code License</h3>
 
-<h3>Support or Contact</h3>
+<p>MIT License (essentially no restrictions of any kind)</p>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<h3>Authors</h3>
+
+<p>Peter Schaeffer</p>
+
+<h1>Contact</h1>
+
+<p><a href="mailto:peter_schaeffer@yahoo.com">peter_schaeffer@yahoo.com</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/pschaeffer">pschaeffer</a></p>
